Add selected site content - images and text

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,16 @@
 /* global styles */
+@import url("/css/fonts/fonts.css");
+
+@font-face {
+  font-family: "roboto regular";
+  src: url("/css/fonts/Roboto/Roboto-Regular.ttf");
+}
+
+@font-face {
+  font-family: "montserrat regular";
+  src: url("/css/fonts/Montserrat/Montserrat-Regular.ttf");
+}
+
+body {
+  font-family: "montserrat regular", Verdana, Geneva, Tahoma, sans-serif;
+}
