--- a/css/fonts/fonts.css
+++ b/css/fonts/fonts.css
@@ -7,3 +7,8 @@
   font-family: "montserrat regular";
   src: url("/css/fonts/Montserrat/Montserrat-Regular.ttf");
 }
+
+@font-face {
+  font-family: "roboto bold", Verdana, Geneva, Tahoma, sans-serif;
+  src: url("/css/fonts/Roboto/Roboto-Bold.ttf");
+}
