--- a/css/styles.css
+++ b/css/styles.css
@@ -25,19 +25,34 @@ header nav a {
 }
 
 .hero {
-  background-image: url("background.jpeg");
+  background-image: url("/img/cityscape.jpeg");
+  background-color: lightgrey;
   background-position: center;
   background-repeat: no-repeat;
-  height: 100vh;
-  width: 100%;
+  background-size: 100%;
+  height: 80vh;
+  max-width: 100%;
   color: white;
+}
+
+.dark-cover {
+  width: 100%;
+  height: 100%;
+  background-color: black;
+  opacity: 0.4;
 }
 
 .headline {
   font-family: "roboto bold", Verdana, Geneva, Tahoma, sans-serif;
   font-size: 25px;
   font-weight: 700;
-  text-shadow: 2px 2px 8px black;
+  color: #fff;
+  z-index: 8;
+}
+
+.hero-content,
+.btn {
+  z-index: 7;
 }
 
 .getting-started,
@@ -116,7 +131,7 @@ header a:hover {
   }
 }
 
-.opac {
+.opacity-9 {
   opacity: 0.9;
 }
 
