--- a/css/styles.css
+++ b/css/styles.css
@@ -25,7 +25,7 @@ header nav a {
 }
 
 .hero {
-  background-image: url("/img/cityscape.jpeg");
+  background-image: url("../img/cityscape.jpeg");
   background-color: lightgrey;
   background-position: center;
   background-repeat: no-repeat;
