--- a/css/fonts/fonts.css
+++ b/css/fonts/fonts.css
@@ -9,6 +9,6 @@
 }
 
 @font-face {
-  font-family: "roboto bold", Verdana, Geneva, Tahoma, sans-serif;
+  font-family: "roboto bold";
   src: url("/css/fonts/Roboto/Roboto-Bold.ttf");
 }
