--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@
 
 * {
   text-decoration: none;
-
+  box-sizing: border-box;
   /* border: 1px solid red; */
 }
 
@@ -25,13 +25,11 @@ header nav a {
 }
 
 .hero {
-  background-image: url(../img/cityscape.jpeg);
-  background-color: lightgrey;
-  background-position: center;
+  background-image: url("../img/cityscape.jpeg");
+  background-position: cover;
   background-repeat: no-repeat;
-  background-size: 100%;
-  height: 80vh;
-  max-width: 100%;
+  height: 120vh;
+  width: 100%;
   color: white;
 }
 
@@ -93,10 +91,10 @@ footer {
   color: #333;
 }
 
-.value-proposition img {
+.value-proposition  div img {
   margin: 30px;
-  width: 200px;
-  height: 200px;
+  width: 250px;
+  height: 250px;
 }
 
 .decorated-nav {
@@ -157,4 +155,17 @@ footer .input-group {
 }
 
 .footer-bottom {
-  background-color: rgb(29.red-bg { background-color: rgb(212, 87, 74); } .blue-bg { background-color: rgb(81, 156, 216); } .gray-bg { background-color: rgb(230, 230, 230); } .yellow-bg { background-color: rgb(230, 172, 91); } 
+  background-color: rgb(29,0,0);
+}
+
+.details div {
+  border: 1px solid lightgrey;
+  border-radius: 2px;
+  text-align: center;
+}
+
+.red-bg { background-color: rgb(212, 87, 74); } 
+.blue-bg { background-color: rgb(81, 156, 216); }
+.gray-bg { background-color: rgb(230, 230, 230); }
+.yellow-bg { background-color: rgb(230, 172, 91); }
+
